# DevOpsDjango

./: .gitignore  Dockerfile  README.md  create_superuser.py  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
accounts/: urls.py
accounts/user/: change_password.py  login.py  logout.py  user_viewsets.py
accounts/user/jwt/: token.py  token_refresh.py  token_verify.py
kuop/: asgi.py  settings.py  urls.py  wsgi.py
kuop/utils/: view.py
